allow grade range selection
